fix: remove unnecessary z-index

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -445,7 +445,6 @@ dl {
   .p-accordion__panel {
     padding-left: 0;
     position: relative;
-    z-index: 1;
   }
 
   .p-accordion__list {
